--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services :
     ports:
       - 54322:5432
     environment :
-      - POSTGRES_USER=suthee
-      - POSTGRES_PASSWORD=ictlnwgame5
+      - POSTGRES_USER=${DB_USER}
+      - POSTGRES_PASSWORD=${DB_PASS}
     image : 'postgres:14.4'
     restart : 'unless-stopped'
   pgadmin :
@@ -15,8 +15,8 @@ services :
     ports:
       - 8079:80
     environment :
-      - PGADMIN_DEFAULT_EMAIL=suthee199999@gmail.com
-      - PGADMIN_DEFAULT_PASSWORD=ictlnwgame5
+      - PGADMIN_DEFAULT_EMAIL=${PG_EMAIL}
+      - PGADMIN_DEFAULT_PASSWORD=${PG_PASS}
     image : 'dpage/pgadmin4:latest'
     restart : 'unless-stopped'
   strapi :
@@ -24,12 +24,12 @@ services :
     ports:
       - 1337:1337
     environment :
-      - DATABASE_CLIENT=postgres
-      - DATABASE_HOST=192.168.56.1
-      - DATABASE_PORT=54322
-      - DATABASE_NAME=suthee
-      - DATABASE_USERNAME=suthee
-      - DATABASE_PASSWORD=ictlnwgame5
-      - DATABASE_SSL=false
+      - DATABASE_CLIENT=${D_CLIENT}
+      - DATABASE_HOST=${D_HOST}
+      - DATABASE_PORT=${D_PORT}
+      - DATABASE_NAME=${D_NAME}
+      - DATABASE_USERNAME=${D_USERNAME}
+      - DATABASE_PASSWORD=${D_PASSWORD}
+      - DATABASE_SSL=${D_SSL}
     image : 'naskio/strapi:latest'
     restart : 'unless-stopped'
